104 ==> 379884 - Item Metadata Editor doesn't save changes.
105 ==> 381380 - Item Edit / Metadata doesn't work.
106 ==> 381639 - Map filter (left side bar) doesn't show images anymore.
107 ==> 149970 - MPEG slideshow : incorrect warrning about missing runtime files.
108 ==> 381916 - digiKam crash when add person names.
109 ==> 328848 - Print Assistant window not resizable nor scrollable.
110 ==> 100311 - digikam crashes when using print wizard.
112 ==> 162085 - digikam freezes while printing.
113 ==> 160810 - digikam crop photos next button does not work.
114 ==> 118868 - A recto-verso printing wizard.
115 ==> 308963 - Add the ability to Export photos to a PDF file.
116 ==> 260994 - Print error when print with "print assistant.
117 ==> 155084 - Printing comments and EXIF tags.
118 ==> 103153 - Add print icon to main toolbar of digiKam.
119 ==> 178983 - next/back-buttons in print-assistant should be labeled.
120 ==> 126863 - print thumbnails on A4 produces 210x297 pixel (instead of mm) image.
121 ==> 195960 - Error printing A4 size miniatures.
122 ==> 101495 - Raster effect on printout - using printwizard.
123 ==> 171439 - Before printing more than 1 picture could be possible all of them cut to set size - only first can be.
124 ==> 233970 - PrintWizard do not retaining settings.
125 ==> 294563 - digiKam - DVD Slideshow.
126 ==> 117073 - Album export to HTMLGallery would benefit from a treeview widget.
128 ==> 251705 - Remove Red Eyes process wrong image regions, fill image parts with green color.
129 ==> 222992 - Crash in digikam when correcting red eyes.
130 ==> 342475 - Crash by open red Eyes correction tool.
131 ==> 164916 - With RAWs the burning crashes.
132 ==> 321879 - digiKam crash while viewing images.
133 ==> 232957 - digikam crashes while importing images (about 60000 files).
134 ==> 316994 - Crash with Red Eyes Correction tool.
135 ==> 322558 - Crash when i click on Red Eyes tool.
136 ==> 