@@ -32,6 +32,7 @@
 #include <QTemporaryFile>
 #include <QWidget>
 #include <QLabel>
+#include <QUuid>
 
 // KDE includes
 
@@ -348,18 +349,18 @@ bool BatchTool::isLastChainedTool() const
 
 void BatchTool::setOutputUrlFromInputUrl()
 {
+    QString randomString(QUuid::createUuid().toString());
     QString path(workingUrl().toLocalFile());
-    QString fileName(inputUrl().fileName());
     QString suffix = outputSuffix();
 
     if (suffix.isEmpty())
     {
-        QFileInfo fi(fileName);
-        suffix = fi.completeSuffix();
+        QFileInfo fi(inputUrl().fileName());
+        suffix = fi.suffix();
     }
 
-    SafeTemporaryFile temp(workingUrl().toLocalFile() + QLatin1String("/BatchTool-XXXXXX-") +
-                           fileName + QLatin1String(".digikamtempfile.") + suffix);
+    SafeTemporaryFile temp(path + QLatin1String("/BatchTool-XXXXXX-") + randomString.mid(1, 8) +
+                           QLatin1String(".digikamtempfile.") + suffix);
 
     temp.setAutoRemove(false);
     temp.open();
