@@ -146,4 +146,5 @@ BUGFIXES FROM BUGZILLA:
 133 ==> 232957 - digikam crashes while importing images (about 60000 files).
 134 ==> 316994 - Crash with Red Eyes Correction tool.
 135 ==> 322558 - Crash when i click on Red Eyes tool.
-136 ==> 
+136 ==> 382133 - processing fails, caused by too long filename.
+137 ==> 
